<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.introduction.MainActivityIntroducion">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_padding_10"
            android:layout_marginEnd="@dimen/margin_padding_10"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/h2"
                android:text="@string/introduction"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDescription1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/h2"
                android:text="@string/intro_one"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/textViewDescription1"
                android:layout_marginTop="@dimen/margin_padding_10"
                android:background="@color/white2"
                android:orientation="horizontal" >

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDescription2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_marginTop="@dimen/h2"
                android:text="@string/intro_two"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/textViewDescription2"
                android:layout_marginTop="@dimen/margin_padding_10"
                android:background="@color/white2"
                android:orientation="horizontal" />


            <TextView
                android:id="@+id/textViewDescription3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line2"
                android:layout_marginTop="@dimen/h2"
                android:text="@string/intro_three"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonBegin"
                android:layout_width="@dimen/width_button_initial"
                android:layout_height="@dimen/height_button_initial"
                android:layout_below="@id/textViewDescription3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_padding_40"
                android:background="@drawable/btn_circle"
                android:backgroundTint="@color/organge1"
                android:text="@string/begin"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/radius_button_30" />
        </RelativeLayout>
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>