<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearlayout_list_song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/selector_adapter"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="@dimen/size_image_details"
            android:layout_height="@dimen/size_image_details"
            android:src="@drawable/ic_map_marker_radius_outline"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_padding_3"
            android:layout_marginLeft="@dimen/margin_padding_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_40"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fecha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginLeft="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textColor="@color/green_android"
                    android:textSize="@dimen/material_text_title"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:gravity="start|center_vertical"
                    android:text="@string/longitude"
                    android:textColor="@color/black_elegant" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:text="@string/longitude"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginStart="@dimen/margin_padding_20"
                    android:layout_marginLeft="@dimen/margin_padding_20"
                    android:gravity="center|center_vertical"
                    android:text="@string/latitude"
                    android:textColor="@color/black_elegant"
                    android:textSize="@dimen/material_text_caption" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_2"
                android:layout_marginStart="@dimen/margin_padding_3"
                android:layout_marginLeft="@dimen/margin_padding_3"
                android:layout_marginTop="@dimen/margin_padding_4"
                android:layout_marginEnd="@dimen/margin_padding_3"
                android:layout_marginRight="@dimen/margin_padding_3"
                android:background="@color/white3"
                android:orientation="horizontal" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>